tests/compile-fail/one_named_lock_multiple_instances.stderr
error[E0308]: mismatched types
  --> tests/compile-fail/one_named_lock_multiple_instances.rs:26:40
   |
26 |             let (a2, _) = lock_a2.lock(&mut a1_token);
   |                                   ---- ^^^^^^^^^^^^^ expected `&mut LockToken<Unlocked>`, found `&mut LockToken<A>`
   |                                   |
   |                                   arguments to this method are incorrect
   |
   = note: expected mutable reference `&mut LockToken<Unlocked>`
              found mutable reference `&mut LockToken<A>`
note: method defined here
  --> src/lib.rs
   |
   |     pub fn lock<'t, 's, PrevId>(
   |            ^^^^
